--- a/index.html
+++ b/index.html
@@ -1,36 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIFGenius - Meme & GIF Creator</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>GIFGenius</h1>
-        <p>Create Memes and GIFs like a genius!</p>
-    </header>
+/* Grundlegendes Styling */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-    <main>
-        <div class="upload-section">
-            <label for="uploadImage">Upload your image or GIF:</label>
-            <input type="file" id="uploadImage" accept="image/*, video/*" onchange="loadImage(event)">
-        </div>
+body {
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    background: linear-gradient(135deg, #ff76b1, #c48bff); /* Farbverlauf */
+    color: white;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+    margin: 0;
+}
 
-        <div class="editor">
-            <canvas id="canvas" width="600" height="400"></canvas>
-            <div class="controls">
-                <button onclick="addText()">Add Text</button>
-                <button onclick="download()">Download Meme/GIF</button>
-            </div>
-        </div>
-    </main>
+/* Container für die gesamte App */
+.container {
+    width: 100%;
+    max-width: 450px; /* Maximale Breite für eine App-Ansicht */
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);
+}
 
-    <footer>
-        <p>&copy; 2025 GIFGenius. All Rights Reserved.</p>
-    </footer>
+/* Header Styling */
+header {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+}
 
-    <script src="js/app.js"></script>
-</body>
-</html>
+h1 {
+    font-size: 2rem;
+    font-weight: 700;
+    margin: 0;
+}
+
+/* Upload Bereich */
+.upload-section {
+    margin-bottom: 20px;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.upload-section label {
+    background-color: #ff76b1;
+    padding: 10px 20px;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    font-size: 1rem;
+    display: inline-block;
+}
+
+.upload-section label:hover {
+    background-color: #ff4f8b;
+}
+
+/* Canvas Styling */
+.editor {
+    position: relative;
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 20px;
+}
+
+canvas {
+    border-radius: 10px;
+    background-color: #fff;
+    max-width: 100%;
+    max-height: 400px; /* Begrenzung der maximalen Höhe */
+    width: 100%;
+}
+
+/* Steuerungsknöpfe */
+.controls {
+    margin-top: 20px;
+}
+
+button {
+    background-color: #00eaff;
+    color: white;
+    padding: 12px 25px;
+    margin: 10px;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1.1rem;
+}
+
+button:hover {
+    background-color: #00bcd4;
+}
+
+/* Footer Styling */
+footer {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    text-align: center;
+    padding: 15px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    font-size: 1rem;
+}
+
+footer a {
+    color: #00eaff;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+/* Media Queries für kleinere Bildschirme */
+@media (max-width: 768px) {
+    .container {
+        padding: 15px;
+    }
+
+    header h1 {
+        font-size: 1.5rem;
+    }
+
+    .upload-section label {
+        font-size: 1rem;
+    }
+
+    .controls button {
+        font-size: 1rem;
+        padding: 10px 20px;
+    }
+}
