--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <div class="header">
         <h1>GIFGenius</h1>
-        <p>Erstelle und entdecke GIFs und Memes!</p>
+        <p>Entdecke Tausende von GIFs und Memes direkt aus Giphy!</p>
         <input type="text" id="searchBar" placeholder="Search for GIFs or Memes...">
     </div>
 
     <div class="grid-container" id="gifGrid">
-        <!-- Dynamisch generierte GIFs werden hier angezeigt -->
+        <!-- GIFs werden hier dynamisch geladen -->
     </div>
 
     <div class="footer">
-        <button id="createGif">Create Your Own GIF</button>
+        <p>Powered by Giphy</p>
     </div>
 
     <script src="app.js"></script>
