--- a/index.html
+++ b/index.html
@@ -4,23 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIFGenius</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="header">
-        <h1>GIFGenius</h1>
-        <p>Entdecke Tausende von GIFs und Memes direkt aus Giphy!</p>
-        <input type="text" id="searchBar" placeholder="Search for GIFs or Memes...">
+    <div class="app">
+        <!-- Header -->
+        <header class="app-header">
+            <input type="text" placeholder="Search GIPHY" id="searchInput">
+            <button id="searchButton">🔍</button>
+        </header>
+
+        <!-- Navigation Tabs -->
+        <nav class="tabs">
+            <button data-category="trending">Trending</button>
+            <button data-category="stickers">Stickers</button>
+            <button data-category="emoji">Emoji</button>
+            <button data-category="reactions">Reactions</button>
+        </nav>
+
+        <!-- GIF Container -->
+        <div id="gifContainer" class="gif-grid">
+            <!-- Dynamically loaded GIFs will appear here -->
+        </div>
+
+        <!-- Footer Navigation -->
+        <footer class="footer">
+            <button id="createButton">➕</button>
+            <button id="searchTabButton">🔍</button>
+            <button id="profileButton">👤</button>
+        </footer>
     </div>
 
-    <div class="grid-container" id="gifGrid">
-        <!-- GIFs werden hier dynamisch geladen -->
-    </div>
-
-    <div class="footer">
-        <p>Powered by Giphy</p>
-    </div>
-
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
