--- a/index.html
+++ b/index.html
@@ -4,36 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIFGenius</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="app">
-        <!-- Header -->
-        <header class="app-header">
-            <h1>GIFGenius</h1>
-            <p>Entdecke Tausende von GIFs und Memes direkt aus Giphy!</p>
-            <input type="text" placeholder="Search for GIFs or Memes..." id="searchInput">
-        </header>
+    <header class="app-header">
+        <h1>GIFGenius</h1>
+        <p>Entdecke Tausende von GIFs und Memes direkt aus Giphy!</p>
+        <input type="text" id="searchInput" placeholder="Search for GIFs or Memes...">
+    </header>
 
-        <!-- Kategorien-Buttons -->
-        <nav class="categories">
-            <button data-category="trending" class="active">Trending</button>
-            <button data-category="stickers">Stickers</button>
-            <button data-category="emoji">Emoji</button>
-            <button data-category="reactions">Reactions</button>
-        </nav>
-
-        <!-- GIF Container -->
-        <div id="gifContainer" class="gif-grid">
-            <!-- GIFs werden hier geladen -->
-        </div>
-
-        <!-- Footer -->
-        <footer class="footer">
-            <p>Powered by Giphy</p>
-        </footer>
+    <div class="categories">
+        <button data-category="trending" class="active">Trending</button>
+        <button data-category="stickers">Stickers</button>
+        <button data-category="emoji">Emoji</button>
+        <button data-category="reactions">Reactions</button>
     </div>
 
-    <script src="js/app.js"></script>
+    <div id="gifContainer" class="gif-grid"></div>
+
+    <footer class="footer">
+        Powered by Giphy
+    </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
